# Rag-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: index.html
frontend/css/: layout-system.css  main.css  mock-reference-ui.css  premium-overrides.css  reference-theme.css
frontend/js/: api.js  app.js  stt.js  tailwind-config.js  tts.js
sample_docs/: sample.txt
scripts/: smoke_check.py
src/rag/: __init__.py  __main__.py  activity_history.py  answer.py  api.py  auth.py  chat_store.py  chunking.py  cli.py  config.py  document_compare.py  guardrails.py  hierarchical_summary.py  index_store.py  ingest.py  knowledge_map.py  notes_export.py  notes_generator.py  page_tree.py  retrieval_explain.py  server.py  sessions.py  stt.py  timeline_extract.py  tool_history.py  tool_presets.py  tts.py  upload_log.py  vectorless_retrieval.py
tests/: test_answer.py  test_api.py  test_document_compare.py  test_guardrails.py  test_hierarchical_summary.py  test_knowledge_map.py  test_page_tree.py  test_retrieval_explain.py  test_timeline_extract.py  test_tts.py
