[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-rag"
version = "0.3.0"
description = "Vectorless PageIndex-style RAG with web UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0,<2",
    "pypdf>=5.0.0,<6",
    "python-dotenv>=1.0.1,<2",
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "python-multipart>=0.0.12,<1",
    "fpdf2>=2.8.0,<3",
    "python-docx>=1.1.0,<2",
    "huggingface_hub>=0.26.0,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9", "httpx>=0.27,<1"]

[project.scripts]
rag = "rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
